# Quote-Agent

./: .gitignore  Auto quoter.md  Dockerfile  LICENSE  Procfile  README.md  agent.py  authorize_ghl.py  deploy_to_github.bat  deploy_to_github.md  process_webhooks.py  pyproject.toml  pytest.ini  railway.json  requirements-test.txt  requirements.txt  server.py  setup.py  test_config.py  test_conversation_flow.py  test_database.py  test_ghl_sms.py  test_webhook.py  test_workflow.py  vercel.json  view_database.py  webhook_data.js
.cursor/rules/: build.mdc  user-skill-level.mdc
Quote-Agent-main/: .gitignore  Procfile  README.md  env.example  railway-requirements.txt  railway.json  test_local_agent.py  test_webhook.py
Quote-Agent-main/quote_bot/: server.py
Quote-Agent-main/sales_bot/: data_utils.py  main.py  quote_logic.py  sales_agent.py  test_chat.py
Quote-Agent-main/sales_bot/db/: init_db.py
api/: webhook.py
ghl_tokens/: token_handler.py
quote_bot/: README.md  local_agent.py  server.py
sales_bot/: README.md  config.py  ghl_api.py  requirements.txt  test_ghl.py
sales_bot/db/: conversations.db  db_utils.py
sales_bot/tests/: test_sales_agent.py
services/: __init__.py  auth_system.py  config_system.py  ghl_service.py  token_systems.py
src/: __init__.py  agent.py  codes.py  database.py  get_fresh_token.py  sms_agent.py  webhook_server.py  workflow_agent.py  workflow_webhook_server.py
tests/: conftest.py  test_auth_system.py  test_ghl_service.py  test_token_system.py
